Bug 42749 - Dell Precision M6600 laptop doesn't reboot on kernel 3.2
Summary: Dell Precision M6600 laptop doesn't reboot on kernel 3.2
Status: CLOSED CODE_FIX
Alias: None
Product: Power Management
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-09 13:09 UTC by tblanchard.bug
Modified: 2012-07-14 15:32 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.2.5
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
dmesg (55.87 KB, text/plain)
2012-02-09 13:09 UTC, tblanchard.bug
Details
dmidecode output (28.66 KB, text/plain)
2012-02-16 13:15 UTC, tblanchard.bug
Details
PCI reboot quirk for Dell Precision M6600 (939 bytes, patch)
2012-02-20 06:22 UTC, Zhang Rui
Details | Diff
dmesg with patch (54.65 KB, text/plain)
2012-02-23 14:07 UTC, tblanchard.bug
Details

Description tblanchard.bug 2012-02-09 13:09:25 UTC
Created attachment 72334 [details]
dmesg

Laptop's name : Dell Inc. Precision M6600
Reboot stopped working with kernel 3.2.
Adding reboot=pci fixes reboot.
I guess a patch would look like that :
https://github.com/mirrors/linux-2.6/commit/6be30bb7d7504ec687a65c9bbdae8d1d2f8eaa19#arch/x86/kernel/reboot.c
Comment 1 Len Brown 2012-02-14 02:32:21 UTC
Did this work in any version of Linux before 3.2?
If so, what is the latest version that worked?

please attach the output from dmidecode

BTW. there are a bunch of ACPI EC errors in your dmesg.
It might be a good idea to file a separate bug on them.
Comment 2 tblanchard.bug 2012-02-16 13:14:37 UTC
Reboot worked fine before 3.2.
Kernel 3.1 is the lastest version that works.
Comment 3 tblanchard.bug 2012-02-16 13:15:34 UTC
Created attachment 72401 [details]
dmidecode output
Comment 4 Zhang Rui 2012-02-20 06:22:50 UTC
Created attachment 72447 [details]
PCI reboot quirk for Dell Precision M6600

please check if this patch works for you  or not.
Comment 5 tblanchard.bug 2012-02-23 14:06:37 UTC
This patch works for me, the laptop reboots fine without reboot=pci now.
Thanks.

I'll add the new dmesg output just in case.
Comment 6 tblanchard.bug 2012-02-23 14:07:17 UTC
Created attachment 72470 [details]
dmesg with patch
Comment 7 Len Brown 2012-06-05 04:17:13 UTC
applied
Comment 8 Florian Mickler 2012-07-01 09:50:18 UTC
A patch referencing this bug report has been merged in Linux v3.5-rc5:

commit 76eb9a30db4bc8fd172f9155247264b5f2686d7b
Author: Zhang Rui <rui.zhang@intel.com>
Date:   Mon Feb 20 14:20:06 2012 +0800

    ACPI, x86: fix Dell M6600 ACPI reboot regression via DMI

Note You need to log in before you can comment on or make changes to this bug.